--- a/.config/uscitibot/container/Containerfile
+++ b/.config/uscitibot/container/Containerfile
@@ -1,6 +1,5 @@
-FROM docker.io/library/alpine
-
+FROM alpine
 RUN apk add py3-pip
-RUN pip install discord.py requests --break-system-packages
+RUN pip install discord.py requests --no-cache-dir --break-system-packages
 WORKDIR /uscitibot
 ENTRYPOINT python subscribot.py
