--- a/home/shared/.config/uscitibot/Dockerfile
+++ b/home/shared/.config/uscitibot/Dockerfile
@@ -1,5 +1,4 @@
 FROM alpine
-RUN apk add py3-pip
-RUN pip install discord.py requests --no-cache-dir --break-system-packages
+RUN apk add py3-pip && pip install discord.py requests --no-cache-dir --break-system-packages
 WORKDIR /uscitibot
 ENTRYPOINT python subscribot.py
