--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -16,6 +16,7 @@ services:
   jellyfin:
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin
+    hostname: honor
     environment:
       - PUID=1000
       - PGID=1000
