--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   uscitibot:
     build:
-      context: .config/uscitibot
+      context: /home/shared/.config/uscitibot
       dockerfile: Dockerfile
     image: buonhobo/uscitibot:latest
     container_name: uscitibot
