switched to samba docker

--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -65,3 +65,21 @@ services:
       - "/etc/ngrok.yml"
     volumes:
       - /home/shared/.config/ngrok.yml:/etc/ngrok.yml
+  samba:
+    container_name: samba
+    image: ghcr.io/servercontainers/samba
+    restart: unless-stopped
+    network_mode: host
+    volumes:
+      - /home/shared:/shares/shared
+    environment:
+      SAMBA_CONF_LOG_LEVEL: 3
+      WSDD2_DISABLE: 1
+      AVAHI_DISABLE: 1
+      NETBIOS_DISABLE: 1
+      GROUP_users: 1000
+      ACCOUNT_buonhobo: assword
+      UID_buonhobo: 1000
+      GROUPS_buonhobo: users
+
+      SAMBA_VOLUME_CONFIG_shared: "[shared]; path = /shares/shared; writeable = yes; readable yes; force user = buonhobo; force group = users; create mask = 755; directory mask = 755;"
