--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -58,6 +58,7 @@ services:
     container_name: ngrok
     restart: unless-stopped
     network_mode: "host"
+    profiles: ["donotstart"]
     command:
       - "start"
       - "--all"
@@ -108,4 +109,18 @@ services:
       - /home/shared/.config/prowlarr:/config
     ports:
       - 9696:9696
+    restart: unless-stopped
+  radarr:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Rome
+    volumes:
+      - /home/shared/.config/radarr:/config
+      - /home/shared/Jellyfin/Movies:/movies #optional
+      - /home/shared/Downloads:/downloads #optional
+    ports:
+      - 7878:7878
     restart: unless-stopped
