--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     image: buonhobo/uscitibot:latest
     container_name: uscitibot
     network_mode: 'host'
+    profiles: ["uscitibot"]
     volumes:
       - /home/shared/.config/uscitibot:/uscitibot
     deploy:
@@ -56,7 +57,7 @@ services:
     container_name: ngrok
     restart: unless-stopped
     network_mode: "host"
-    profiles: ["donotstart"]
+    profiles: ["ngrok"]
     command:
       - "start"
       - "--all"
