--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -136,3 +136,16 @@ services:
     ports:
       - 6767:6767
     restart: unless-stopped
+  code-server:
+    image: linuxserver/code-server:4.22.0
+    container_name: code-server
+    restart: unless-stopped
+    environment:
+      - TZ=Europe/Rome # Specify a timezone to use EG Europe/London
+      - SUDO_PASSWORD=assword # If this optional variable is set, user will have sudo access in the code-server terminal with the specified password.
+      - PUID=1000 # for UserID
+      - PGID=1000 # for GroupID
+    volumes:
+      - /home/shared/.config/code-server:/config # Contains all relevant configuration files.
+    ports:
+      - 8443:8443/tcp # Web UI
