added flaresolverr and deleted code-server

--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -138,21 +138,17 @@ services:
     ports:
       - 6767:6767
     restart: unless-stopped
-  code-server:
-    image: lscr.io/linuxserver/code-server:4.22.0
-    container_name: code-server
-    restart: unless-stopped
+  flaresolverr:
+    image: ghcr.io/flaresolverr/flaresolverr:latest
+    container_name: flaresolverr
     environment:
-      - TZ=Europe/Rome # Specify a timezone to use EG Europe/London
-      - SUDO_PASSWORD=assword # If this optional variable is set, user will have sudo access in the code-server terminal with the specified password.
-      - PUID=1000 # for UserID
-      - PGID=1000 # for GroupID
-      - DEFAULT_WORKSPACE=/workspace #optional
-    volumes:
-      - /home/shared/.config/code-server:/config # Contains all relevant configuration files.
-      - /home/shared/Documents/workspace:/workspace
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - LOG_HTML=${LOG_HTML:-false}
+      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
+      - TZ=Europe/Rome
     ports:
-      - 8443:8443/tcp # Web UI
+      - "${PORT:-8191}:8191"
+    restart: unless-stopped
   watchtower:
     image: containrrr/watchtower
     container_name: watchtower
