--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   uscitibot:
     build:
@@ -8,9 +7,9 @@ services:
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
     container_name: uscitibot
-    network_mode: 'host'
+    network_mode: "host"
     volumes:
-      - /home/shared/.config/uscitibot:/uscitibot
+      - /home/shared/.config/uscitibot:/uscitibot:z
     deploy:
       restart_policy:
         delay: 180s
@@ -26,9 +25,9 @@ services:
       - TZ=Europe/Rome
       - JELLYFIN_PublishedServerUrl=192.168.1.137 #optional
     volumes:
-      - /home/shared/.config/jellyfin:/config
-      - /home/shared/Media/Jellyfin/Shows:/data/tvshows
-      - /home/shared/Media/Jellyfin/Movies:/data/movies
+      - /home/shared/.config/jellyfin:/config:z
+      - /home/shared/Media/Jellyfin/Shows:/data/tvshows:z
+      - /home/shared/Media/Jellyfin/Movies:/data/movies:z
     devices:
       - /dev/dri:/dev/dri
     ports:
@@ -47,31 +46,13 @@ services:
       - WEBUI_PORT=8080
       - UMASK=000
     volumes:
-      - /home/shared/.config/qbittorrent-nox:/config
-      - /home/shared/Media:/data
+      - /home/shared/.config/qbittorrent-nox:/config:z
+      - /home/shared/Media:/data:z
     ports:
       - 8080:8080
       - 6881:6881
       - 6881:6881/udp
     restart: unless-stopped
-  samba:
-    container_name: samba
-    image: ghcr.io/servercontainers/samba
-    restart: unless-stopped
-    network_mode: host
-    volumes:
-      - /home/shared:/shares/
-    environment:
-      SAMBA_CONF_LOG_LEVEL: 3
-      WSDD2_DISABLE: 1
-      AVAHI_DISABLE: 1
-      NETBIOS_DISABLE: 1
-      GROUP_users: 1000
-      ACCOUNT_buonhobo: assword
-      UID_buonhobo: 1000
-      GROUPS_buonhobo: users
-
-      SAMBA_VOLUME_CONFIG_shared: "[shared]; path = /shares; writeable = yes; readable yes; force user = buonhobo; force group = users; create mask = 755; directory mask = 755;"
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
@@ -80,8 +61,8 @@ services:
       - PGID=1000
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/sonarr:/config
-      - /home/shared/Media:/data
+      - /home/shared/.config/sonarr:/config:z
+      - /home/shared/Media:/data:z
     ports:
       - 8989:8989
     restart: unless-stopped
@@ -93,7 +74,7 @@ services:
       - PGID=1000
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/prowlarr:/config
+      - /home/shared/.config/prowlarr:/config:z
     ports:
       - 9696:9696
     restart: unless-stopped
@@ -105,8 +86,8 @@ services:
       - PGID=1000
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/radarr:/config
-      - /home/shared/Media/:/data
+      - /home/shared/.config/radarr:/config:z
+      - /home/shared/Media/:/data:z
     ports:
       - 7878:7878
     restart: unless-stopped
@@ -118,22 +99,10 @@ services:
       - PGID=1000
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/bazarr:/config
-      - /home/shared/Media/Jellyfin/Movies:/movies #optional
-      - /home/shared/Media/Jellyfin/Shows:/tv #optional
+      - /home/shared/.config/bazarr:/config:z
+      - /home/shared/Media:/data:z #optional
     ports:
       - 6767:6767
-    restart: unless-stopped
-  flaresolverr:
-    image: ghcr.io/flaresolverr/flaresolverr:latest
-    container_name: flaresolverr
-    environment:
-      - LOG_LEVEL=${LOG_LEVEL:-info}
-      - LOG_HTML=${LOG_HTML:-false}
-      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
-      - TZ=Europe/Rome
-    ports:
-      - "${PORT:-8191}:8191"
     restart: unless-stopped
   watchtower:
     image: containrrr/watchtower
@@ -141,3 +110,16 @@ services:
     restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  nextcloud:
+    image: lscr.io/linuxserver/nextcloud:latest
+    container_name: nextcloud
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Rome
+    volumes:
+      - /home/shared/.config/nextcloud:/config:z
+      - /home/shared/Media/Nextcloud:/data:z
+    ports:
+      - 443:443
+    restart: unless-stopped
