--- a/home/shared/docker-compose.yml
+++ b/home/shared/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     container_name: uscitibot
     network_mode: "host"
     volumes:
-      - /home/shared/.config/uscitibot:/uscitibot:z
+      - /home/shared/.config/uscitibot:/uscitibot:Z
     deploy:
       restart_policy:
         delay: 180s
@@ -20,12 +20,12 @@ services:
     container_name: jellyfin
     hostname: minipc
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
       - JELLYFIN_PublishedServerUrl=192.168.1.137 #optional
     volumes:
-      - /home/shared/.config/jellyfin:/config:z
+      - /home/shared/.config/jellyfin:/config:Z
       - /home/shared/Media/Jellyfin/Shows:/data/tvshows:z
       - /home/shared/Media/Jellyfin/Movies:/data/movies:z
     devices:
@@ -40,13 +40,13 @@ services:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
     environment:
-      - PUID=1000
-      - PGID=100
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
       - WEBUI_PORT=8080
       - UMASK=000
     volumes:
-      - /home/shared/.config/qbittorrent-nox:/config:z
+      - /home/shared/.config/qbittorrent-nox:/config:Z
       - /home/shared/Media:/data:z
     ports:
       - 8080:8080
@@ -57,11 +57,11 @@ services:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/sonarr:/config:z
+      - /home/shared/.config/sonarr:/config:Z
       - /home/shared/Media:/data:z
     ports:
       - 8989:8989
@@ -70,11 +70,11 @@ services:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/prowlarr:/config:z
+      - /home/shared/.config/prowlarr:/config:Z
     ports:
       - 9696:9696
     restart: unless-stopped
@@ -82,11 +82,11 @@ services:
     image: lscr.io/linuxserver/radarr:latest
     container_name: radarr
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/radarr:/config:z
+      - /home/shared/.config/radarr:/config:Z
       - /home/shared/Media/:/data:z
     ports:
       - 7878:7878
@@ -95,11 +95,11 @@ services:
     image: lscr.io/linuxserver/bazarr:latest
     container_name: bazarr
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/bazarr:/config:z
+      - /home/shared/.config/bazarr:/config:Z
       - /home/shared/Media:/data:z #optional
     ports:
       - 6767:6767
@@ -108,18 +108,26 @@ services:
     image: containrrr/watchtower
     container_name: watchtower
     restart: unless-stopped
+#    environment:
+#      - WATCHTOWER_RUN_ONCE=true
+    security_opt:
+      - "label=disable"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-  nextcloud:
-    image: lscr.io/linuxserver/nextcloud:latest
-    container_name: nextcloud
+      - /var/run/docker.sock:/var/run/docker.sock:z
+  syncthing:
+    image: lscr.io/linuxserver/syncthing:latest
+    container_name: syncthing
+    hostname: minipc #optional
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1001
+      - PGID=1001
       - TZ=Europe/Rome
     volumes:
-      - /home/shared/.config/nextcloud:/config:z
-      - /home/shared/Media/Nextcloud:/data:z
+      - /home/shared/.config/syncthing:/config:Z
+      - /home/shared/Media/Syncthing:/data:z
     ports:
-      - 443:443
+      - 8384:8384
+      - 22000:22000/tcp
+      - 22000:22000/udp
+      - 21027:21027/udp
     restart: unless-stopped
