--- a/home/buonhobo/.gitconfig
+++ b/home/buonhobo/.gitconfig
@@ -1,3 +1,8 @@
 [user]
-	email = naturytropik@gmail.com
 	name = buonhobo
+	email = bnnalx@gmail.com
+	signingkey = /home/buonhobo/.ssh/id_ed25519.pub
+[commit]
+	gpgsign = true
+[gpg]
+	format = ssh
