updated git, dns, smb and containers

--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -46,7 +46,8 @@
 [shared]
 	path = /var/home/shared
 	writeable = Yes
-	force user = buonhobo
-	force group = users
-	create mask = 755
-	directory mask = 755
+	read only = no
+	browseable = yes
+	valid users = buonhobo
+
+# sudo semanage boolean --modify --on samba_export_all_rw
