--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -51,3 +51,4 @@
 	valid users = buonhobo
 
 # sudo semanage boolean --modify --on samba_export_all_rw
+# //minipc/shared /var/home/shared cifs username=buonhobo,password=assword,uid=buonhobo,gid=buonhobo,x-systemd.automount,x-systemd.requires=tailscaled.service,x-systemd.idle-timeout=60,x-systemd.mount-timeout=30 0 0
