--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -1,4 +1,4 @@
-name: Build Anaconda ISO
+name: Build container image
 
 on:
   push:
@@ -13,8 +13,8 @@ jobs:
     permissions:
       packages: write
       contents: read
-    name: Build and Push Anaconda ISO
-    runs-on: centos-workstation
+    name: Build and push container image
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -32,10 +32,3 @@ jobs:
           file: Containerfile
           push: true
           tags: ghcr.io/buonhobo/serverino-bootc:latest
-
-      - name: Build ISO
-        uses: "@ublue-os/bootc-image-builder-action"
-        with:
-          config-file: config.json
-          image: ghcr.io/buonhobo/serverino-bootc:latest
-          rootfs: btrfs
